Dockerを使用するように変更
Dockerを使用して以下3つのコンテナを定義した
・データベース：mysql
・バックエンド：Rails
・フロントエンド：React(vite)
その他、api/***のルーティングとサンプルコントローラーを作成

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,10 @@
     "strict": true,
     "jsx": "react-jsx",
     "noEmit": true,
+    "typeRoots": [
+      "./frontend/types",
+      "node_modules/@types"
+    ]
   },
   "include": [
     "./frontend/src/**/*"
