--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jest": "^29.2.6",
     "@vitejs/plugin-react": "^3.0.1",
     "autoprefixer": "^10.4.13",
+    "esbuild": "^0.17.12",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "postcss": "^8.4.21",
